<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateMessageActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/edit_text_padding"
        android:hint="@string/email_to"
        android:inputType="textEmailAddress"
        android:background="@android:drawable/editbox_background_normal"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/edit_text_padding"
        android:hint="@string/email_subject"
        android:inputType="textEmailSubject"
        android:background="@android:drawable/editbox_background_normal"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:padding="@dimen/edit_text_padding"
        android:hint="@string/email_to"
        android:inputType="text"
        android:gravity="top"
        android:background="@android:drawable/editbox_background_normal"  />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_business_signature"/>

</LinearLayout>