<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="@dimen/maxHeight"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/email_item_padding">

        <ImageView
            android:id="@+id/user_image_view"
            android:layout_width="@dimen/user_image_size"
            android:layout_height="@dimen/user_image_size"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/user_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_toEndOf="@id/user_image_view"
            android:singleLine="true"
            android:text="@string/user_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/user_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_subject_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_text_view"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_toEndOf="@id/user_image_view"
            android:singleLine="true"
            android:text="@string/email_subject"
            android:textColor="@android:color/black"
            android:textSize="@dimen/email_header_ts"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_compose_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_subject_text_view"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_toEndOf="@id/user_image_view"
            android:singleLine="true"
            android:text="@string/email_compose"
            android:textSize="@dimen/email_text_ts" />

        <TextView
            android:id="@+id/email_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:singleLine="true"
            android:text="@string/email_date"
            android:textSize="@dimen/email_time_passed_ts" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@android:color/darker_gray" />

</LinearLayout>